Read and write state a bit better; add another button

--- a/battle.html
+++ b/battle.html
@@ -5,7 +5,8 @@
 </head>
 <body>
   <p id="status"></p>
-  <button id="dangermouse">danger mouse</button>
+  <button id="start">start</button>
+  <button id="stupid">stupid</button>
   <script type="text/javascript" src="battle.js"></script>
 </body>
 </html>
